--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,7 +1,7 @@
 @import '_variables.scss';
 
 body {
-  font-family: $font;
+  font-family: 'brandon_grotesque_regularRg';
   color: $text-color;
   font-size: 14px;
   background: $body-color;
